<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AjouterLivre">

    <Button
        android:id="@+id/btn_valider_ajout_livre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="184dp"
        android:text="@string/ajouter_le_livre"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_auteur" />

    <EditText
        android:id="@+id/input_titre"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="71dp"
        android:layout_marginEnd="71dp"
        android:layout_marginBottom="56dp"
        android:ems="10"
        android:hint="@string/ex_titre"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/label_auteur"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_titre" />

    <EditText
        android:id="@+id/input_auteur"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="71dp"
        android:layout_marginEnd="71dp"
        android:layout_marginBottom="122dp"
        android:ems="10"
        android:hint="@string/ex_name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/btn_valider_ajout_livre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_auteur" />

    <TextView
        android:id="@+id/label_titre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginTop="161dp"
        android:layout_marginBottom="17dp"
        android:text="@string/titre_du_livre"
        app:layout_constraintBottom_toTopOf="@+id/input_titre"
        app:layout_constraintStart_toStartOf="@+id/input_titre"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/label_auteur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginBottom="8dp"
        android:text="@string/nom_de_l_auteur"
        app:layout_constraintBottom_toTopOf="@+id/input_auteur"
        app:layout_constraintStart_toStartOf="@+id/input_auteur"
        app:layout_constraintTop_toBottomOf="@+id/input_titre" />
</androidx.constraintlayout.widget.ConstraintLayout>