<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_ajouter_livre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="258dp"
        android:text="@string/ajouter_un_livre"
        android:onClick="AjouterUnLivreActivity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/liste_livre_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/liste_de_livres"
        app:layout_constraintStart_toStartOf="@+id/btn_ajouter_livre"
        app:layout_constraintTop_toBottomOf="@+id/btn_ajouter_livre" />

    <TextView
        android:id="@+id/textView_accueil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="106dp"
        android:text="@string/bienvenue_dans_la_biblioth_que"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>